re#1417 re#1418 fixed password aligned to right, added fadeout on demo promo list

--- a/skin/frontend/modago/default/sass/design/style/_mypromotions.scss
+++ b/skin/frontend/modago/default/sass/design/style/_mypromotions.scss
@@ -694,3 +694,19 @@ body.mypromotions-index-index #content {
 		padding-left: 7680px;
 	}
 }
+
+#mypromotions-list-fadeout {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  margin-bottom: 25px;
+  background: -moz-linear-gradient(top, rgba(242,241,240,0) 0%, rgba(242,241,240,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(242,241,240,0)), color-stop(100%,rgba(242,241,240,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(242,241,240,0) 0%,rgba(242,241,240,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, rgba(242,241,240,0) 0%,rgba(242,241,240,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, rgba(242,241,240,0) 0%,rgba(242,241,240,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom, rgba(242,241,240,0) 0%,rgba(242,241,240,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00f2f1f0', endColorstr='#f2f1f0',GradientType=0 ); /* IE6-9 */
+}
